--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
-"presets": [
-  "env"
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": [
+            "last 5 versions",
+            "ie >= 8"
+          ]
+        }
+      }
+    ]
   ]
 }
