--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production --watch",
-    "surge": "surge dist eupassarinho.surge.sh"
+    "surge": "surge dist eupassarinho.surge.sh",
+    "start": "webpack-dev-server --mode development --open"
   },
   "dependencies": {
     "autoprefixer": "^8.6.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^0.28.11",
+    "axios": "^0.18.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
@@ -24,11 +22,20 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.5",
     "webpack-md5-hash": "^0.0.6"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.3.1",
     "pug": "^2.0.3",
