--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production --watch",
+    "build": "webpack --mode production",
     "surge": "surge dist eupassarinho.surge.sh",
     "start": "webpack-dev-server --mode development --open"
   },
