--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
     "surge": "surge dist eupassarinho.surge.sh",
-    "start": "webpack-dev-server --mode development --open"
+    "start": "webpack-dev-server --mode development --open",
+    "prod": "npm-run-all build surge"
   },
   "dependencies": {
     "autoprefixer": "^8.6.3",
     "axios": "^0.18.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "minimatch": "^3.0.4",
@@ -20,12 +22,14 @@
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.5",
     "webpack-md5-hash": "^0.0.6"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -37,7 +41,9 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "font-awesome-loader": "^1.0.2",
     "image-webpack-loader": "^4.3.1",
+    "npm-run-all": "^4.1.3",
     "pug": "^2.0.3",
     "pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
     "surge": "^0.20.1"
