--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "i18next": "^11.6.0",
     "mini-css-extract-plugin": "^0.4.0",
     "minimatch": "^3.0.4",
     "node-sass": "latest",
@@ -29,7 +30,6 @@
     "webpack-md5-hash": "^0.0.6"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
